{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GroundMovement",
            "id": "25f7f5b5-2134-4c79-92a8-3840a84a6dc3",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "Button",
                    "id": "a6a96fe2-2815-453b-a5ca-71a0d1944893",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d7aa6d1c-615d-465e-be1a-9d7fad24fc42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HorizontalLook",
                    "type": "PassThrough",
                    "id": "8ef6e8a9-79cb-4118-a072-f6b623a83aa8",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "VerticalLook",
                    "type": "PassThrough",
                    "id": "3a5bd4b2-090b-4a76-ba33-4fa9c743f557",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "68dd671b-54bb-4dd5-a13b-8add9f181656",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "ebb17342-c7b5-4103-bff0-bf048dd70bbc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9490af3c-a7cd-4040-b6db-0fbde9e23c70",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a6ba9090-59df-4cd6-a183-1855c34a2ffe",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "370e5b71-6c55-45b8-82c5-5c192361fa65",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e1be1e01-4cf3-488c-8732-af88a91223b3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8c73415b-b73c-4580-af22-b82759376673",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bd4d827-92c7-43f6-b724-6332461cc6e6",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39ecdf28-25c3-4c85-b1d6-cf062d515d39",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6313f197-ac49-4474-a31d-d230ce120645",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}